correct text align style syntax

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 p {
-  align: right
+  text-align: right;
 }
 h1 {
-  align: right
+  text-align: right;
 }
